--- a/scripts/install
+++ b/scripts/install
@@ -33,7 +33,7 @@ ynh_config_add_nginx
 # Create a dedicated systemd config
 ynh_config_add_systemd
 
-yunohost service add "$app" --description="A short description of the app" --log="/var/log/$app/$app.log"
+yunohost service add "$app" --description="Identity infrastructure" --log="/var/log/$app/$app.log"
 
 #=================================================
 # START SYSTEMD SERVICE
